--- a/style.css
+++ b/style.css
@@ -69,18 +69,19 @@ header h3{
     border-radius: 7px;
 }
 .container1{
-    width: 90vw;
+    width: 98vw;
+    height: 120vh;
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    text-align: center;
+
 }
 .container1 img{
     width: 95vw;
     position: relative;
-    top: -6vw;
-    right: -2vw;
+    top: 2em;
+    right: 1vw;
     z-index: -1;
 }
 
@@ -94,8 +95,8 @@ header h3{
 
 fieldset{ 
     position: relative;
-    left: -22vw;
-    top: -9vw;
+    left: -22%;
+    top: 2em;
     display: flex;
     width: auto;
     height: auto;
@@ -117,6 +118,7 @@ fieldset{
 form{
     background-color: white;
     border-radius: 10px;
+    max-width: 30vw;
     width: 30vw;
     display: flex;
     flex-direction: column;
@@ -347,4 +349,45 @@ form h2{
 }
 .aviso span{
     color: #1A7FBD;
+}
+
+/* CONTAINER 2 */
+
+.container2{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    padding-top: 10%;
+}
+
+.container2 img{
+    width: 40vw;
+    background-image: radial-gradient(white, #A4DCFF, #1A7FBD, #1A7FBD);
+}
+
+.oprojeto{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 30vw;
+    margin-left: 7%;
+
+}
+
+.oprojeto h2{   
+    color: #A4DCFF;
+    text-align: left;
+    font-size: 2rem;
+    padding-bottom: 2%;
+}
+
+.oprojeto p{
+    color:#FFF;
+    padding-top: 3%;
+    font-size: 0.95rem;
+}
+
+.oprojeto p span{
+    font-weight: bold;
 }
