--- a/style.css
+++ b/style.css
@@ -3,6 +3,11 @@
     margin: 0px;
     font-family: 'Noto-Sans';
 }
+
+a{
+    text-decoration: none;
+    color: inherit;
+}
 @font-face {
     font-family: 'Noto-Sans';
     src: url(Noto_Sans/NotoSans-Regular.ttf) format('truetype');
@@ -53,9 +58,9 @@ header ul{
 }
 header h3{
     color:#FFF;
-    font-size: 1rem;
+    font-size: 1.2vw;
     text-align: center;
-    white-space: wrap;
+    white-space: nowrap;
     max-width: 15vw;
     max-height: 10vh;
     width: auto;
@@ -64,7 +69,7 @@ header h3{
     padding-top: 1vw;
     padding-bottom: 1vw;
     padding-left: 2vw;
-    padding-right: 2vw;
+    padding-right: 2.5vw;
     margin-left: 4%;
     border-radius: 7px;
 }
@@ -79,7 +84,7 @@ header h3{
 .container1 img{
     width: 95vw;
     position: relative;
-    top: 50px;
+    top: 20px;
     right: 1vw;
     z-index: -1;
 }
@@ -94,8 +99,8 @@ header h3{
 
 fieldset{ 
     position: relative;
-    right: 20em;
-    top: 50px;
+    right: 18vw;
+    top: 20px;
     display: flex;
     width: auto;
     height: auto;
@@ -127,14 +132,14 @@ form{
 }
 form h1{
     color: #A4DCFF;
-    font-size: 1.2rem;
+    font-size: 1.5vw;
     text-align: left;
     margin-left: 9%;
     margin-top: 10%;
 }
 form h2{
     color: #1A7FBD;
-    font-size: 0.85rem;
+    font-size: 1vw;
     text-align: left;
     margin-left: 9%;
     margin-top: 3%;
@@ -166,6 +171,7 @@ form h2{
     position: relative;
     left: 3vw;
     top: -0.2em;
+    z-index: 1;
     
 }
 .inputmail{
@@ -188,6 +194,7 @@ form h2{
     position: relative;
     left: 3vw;
     top: -0.2em;
+    z-index: 1;
 }
 .selectestado{
     display: flex;
@@ -210,6 +217,7 @@ form h2{
     position: relative;
     left: 3vw;
     top: -0.2em;
+    z-index: 1;
 }
 .option{
     color: rgb(158, 158, 158);
@@ -425,23 +433,23 @@ form h2{
     background-clip: text;
     -webkit-text-fill-color: transparent;
     -webkit-background-clip: text;
-    font-size: 1.7rem;
+    font-size: 2.5vw;
     padding-bottom: 10px;
 }
 
 .textoProblemas h3{
-    font-size: 0.9rem;
+    font-size: 1.2vw;
     padding-bottom: 15px;
     margin-bottom: 15px;
     border-bottom: 1px solid rgb(201, 198, 198) ;
 }
 
 .textoProblemas{
-    font-size: 0.7rem;
+    font-size: 1vw;
 }
 
 .textoProblemas h4{
-    font-size: 0.7rem;
+    font-size: 1vw;
     margin-top: 10px;
     font-weight: bold;
 }
@@ -465,9 +473,11 @@ form h2{
     margin-right: 0.5em;
     font-family: 'Noto-Sans-light';
     box-shadow: rgba(255, 255, 255, 0.1) 0px 1px 1px 0px inset, rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
+    font-size: 1.1vw;
 }
 
 .card1 h2{
+    font-size: 1.7vw;
     margin-bottom: 0.5em;
     font-family: 'Noto-Sans';
 }
@@ -482,9 +492,11 @@ form h2{
     margin-right: 0.5em;
     font-family: 'Noto-Sans-light';
     box-shadow: rgba(255, 255, 255, 0.1) 0px 1px 1px 0px inset, rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
+    font-size: 1.1vw;
 }
 
 .card2 h2{
+    font-size: 1.7vw;
     margin-bottom: 0.5em;
     font-family: 'Noto-Sans';
 }
@@ -499,10 +511,12 @@ form h2{
     margin-right: 0.5em;
     font-family: 'Noto-Sans-light';
     box-shadow: rgba(255, 255, 255, 0.1) 0px 1px 1px 0px inset, rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
+    font-size: 1.1vw;
     
 }
 
 .card3 h2{
+    font-size: 1.7vw;
     margin-bottom: 0.5em;
     font-family: 'Noto-Sans';
 }
@@ -632,4 +646,99 @@ form h2{
     text-align: center;
     color: #FFF;
     height: 50vh;
+    padding-bottom: 5vw;
+}
+
+.ContainerObjetivos h2{
+    font-size: 2vw;
+    margin-top: 4vw;
+    margin-bottom: 4vw;
+
+}
+
+.cardsobjetivos{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
+.Objetivos{
+    color: black;
+    text-align: center;
+    background-color: #FFF;
+    border-radius: 10px;
+    width: 20vw;
+    height: 23vh;
+    padding: 1.5em;
+    margin-right: 0.5em;
+    font-family: 'Noto-Sans-light';
+    box-shadow: rgba(255, 255, 255, 0.1) 0px 1px 1px 0px inset, rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
+}
+
+.Objetivos h3{
+    font-size: 1.5vw;
+    margin-bottom: 1vw;
+}
+
+.Objetivos p{
+    font-size: 1.2vw;
+    margin-right: 10px;
+    margin-left: 10px;
+    margin-bottom: 10px;
+}
+
+footer{
+    background-color: black;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: top;
+    padding-top: 5vw;
+    padding-bottom: 5vw;
+}
+
+.redessociais{
+    display: flex;
+    flex-direction: row;
+    justify-content: left;
+    align-items: center;
+}
+.redessociais img{
+    width: 1vw;
+    margin: 0.5vw;
+    margin-top: 1vw;
+    margin-bottom: 1vw
+}
+
+.colunabranding p{
+    color: rgb(207, 207, 207);
+    font-size: 0.7vw;
+}
+
+footer button{
+    background-color: white;
+    padding-right: 1.5vw;
+    padding-left: 1.5vw;
+    font-size: 0.7vw;
+    border-radius: 7px;
+    margin-left: 8vw;
+    height: 3.5vw;
+}
+
+footer ul{
+    margin-left: 5vw;
+    padding-right: 3vw;
+    list-style-type: none;
+    color: #FFF;
+    font-family: 'Noto-Sans-light';
+    border-right: 1px solid rgb(66, 66, 66);
+}
+
+footer li{
+    margin: 0.5vw;
+}
+
+.contato ul{
+    border: 0;
 }
